--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,10 +1,10 @@
 {
-    "Обзор": "Overview",
-    "Установка": "Installation",
-    "Architecture": "Architecture",
-    "Архитектура UI": "UI Architecture",
-    "Роутинг": "Routing",
-    "Использование SSR": "SSR Usage",
+  "Обзор": "Overview",
+  "Установка": "Installation",
+  "Архитектура": "Architecture",
+  "Архитектура UI": "UI Architecture",
+  "Роутинг": "Routing",
+  "Использование SSR": "SSR Usage",
   "Более 70 компонентов": "More 70 components",
   "Создавайте сложные интерфейсы в библиотеке с более 70 различных UI компонентов, с настраиваемым цветом, размером и другими характеристиками": "Create complex interfaces in a library of over 70 different UI components, with customizable color, size, and more",
   "Тёмная тема": "Dark mode",
