--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,54 +1,58 @@
 {
-  "Обзор": "Overview",
-  "Установка": "Installation",
-  "Архитектура": "Architecture",
-  "Архитектура UI": "UI Architecture",
-  "Роутинг": "Routing",
-  "Использование SSR": "SSR Usage",
-  "Более 70 компонентов": "More 70 components",
-  "Создавайте сложные интерфейсы в библиотеке с более 70 различных UI компонентов, с настраиваемым цветом, размером и другими характеристиками": "Create complex interfaces in a library of over 70 different UI components, with customizable color, size, and more",
-  "Тёмная тема": "Dark mode",
-  "И как же без darkmode в современных интерфейсах": "And what about without darkmode in modern interfaces",
-  "Открытый код и документация, библиотека компонентов, открытый код, React, Vue": "Open Source and documentation, component library, Open Source, React, Vue",
-  "Наш Open-Source фреймворк Steroids \n это экосистема на основе React и Redux \n с большим набором готовых компонентов, \n уникальной архитектурой, UI Kit и SSR.": "Our Open-Source Steroids framework is an ecosystem based on React and Redux with a large set of ready-made components, unique architecture, UI Kit and SSR",
-  "На старт": "Getting started",
-  "Набор инструментов для создания интерфейсов для дизайнера": "A set of tools for creating interfaces for a designer",
-  "Датапикер": "Datepicker",
-  "Карточка": "Card",
-  "Пароль": "Password",
-  "Логин": "Login",
-  "Отобразить иконку": "Show icon",
-  "Отобразить placeholder": "Show placeholder",
-  "Отобразить label": "Show label",
-  "Отправить": "Submit",
-  "Включить стиль outline": "Enable outline style",
-  "Включить состояние загрузки": "Enable loading state",
-  "Отобразить header": "Show header",
-  "Добавить изображение": "Show image",
-  "Произошла ошибка": "Error",
-  "Включить состояние disabled": "Enable disabled state",
-  "Отобразить ошибку": "Show error",
-  "UI компоненты": "UI components",
-  "Компоненты приложения": "App components",
-  "Начало работы": "Getting started",
-  "Преимущества": "Advantages",
-  "Ещё больше компонентов": "More components",
-  "Здесь": "Here",
-  "Начать": "Getting started",
-  "Перейти в Git": "Go to Git",
-  "Перейти на Github": "Go to Github",
-  "Попробуйте сами": "Try it yourself",
-  "Размер": "Size",
-  "Цвет": "Color",
-  "Создавайте со Steroid-ами": "Create with Steroids",
-  "Политика конфиденциальности": "Privacy policy",
-  "Сделано в KozhinDev": "Made in KozhinDev",
-  "Сбросить": "Reset",
-  "ИД": "ID",
-  "Имя": "Name",
-  "Значение слайдера: {counter}": "Slider value: {counter}",
-  "Значение меняется при изменения значения слайдера в реальном времени: {counter}": "The value changes when the value of the slider changes in real time: {counter}",
-  "Уведомление типа": "Notification type",
-  "Документация": "Documentation",
-  "Набор статей": "Articles"
+    "Обзор": "Overview",
+    "Установка": "Installation",
+    "Архитектура": "Architecture",
+    "Архитектура UI": "UI Architecture",
+    "Роутинг": "Routing",
+    "Использование SSR": "SSR Usage",
+    "Более 70 компонентов": "More 70 components",
+    "Создавайте сложные интерфейсы в библиотеке с более 70 различных UI компонентов, с настраиваемым цветом, размером и другими характеристиками": "Create complex interfaces in a library of over 70 different UI components, with customizable color, size, and more",
+    "Тёмная тема": "Dark mode",
+    "И как же без darkmode в современных интерфейсах": "And what about without darkmode in modern interfaces",
+    "Открытый код и документация, библиотека компонентов, открытый код, React, Vue": "Open Source and documentation, component library, Open Source, React, Vue",
+    "Наш Open-Source фреймворк Steroids \n это экосистема на основе React и Redux \n с большим набором готовых компонентов, \n уникальной архитектурой, UI Kit и SSR.": "Our Open-Source Steroids framework is an ecosystem based on React and Redux with a large set of ready-made components, unique architecture, UI Kit and SSR",
+    "На старт": "Getting started",
+    "Набор инструментов для создания интерфейсов для дизайнера": "A set of tools for creating interfaces for a designer",
+    "Датапикер": "Datepicker",
+    "Карточка": "Card",
+    "Пароль": "Password",
+    "Логин": "Login",
+    "Отобразить иконку": "Show icon",
+    "Отобразить placeholder": "Show placeholder",
+    "Отобразить label": "Show label",
+    "Отправить": "Submit",
+    "Включить стиль outline": "Enable outline style",
+    "Включить состояние загрузки": "Enable loading state",
+    "Отобразить header": "Show header",
+    "Добавить изображение": "Show image",
+    "Произошла ошибка": "Error",
+    "Включить состояние disabled": "Enable disabled state",
+    "Отобразить ошибку": "Show error",
+    "UI компоненты": "UI components",
+    "Компоненты приложения": "App components",
+    "Начало работы": "Getting started",
+    "Преимущества": "Advantages",
+    "Ещё больше компонентов": "More components",
+    "Здесь": "Here",
+    "Начать": "Getting started",
+    "Перейти в Git": "Go to Git",
+    "Перейти на Github": "Go to Github",
+    "Попробуйте сами": "Try it yourself",
+    "Размер": "Size",
+    "Цвет": "Color",
+    "Создавайте со Steroid-ами": "Create with Steroids",
+    "Политика конфиденциальности": "Privacy policy",
+    "Сделано в KozhinDev": "Made in KozhinDev",
+    "Сбросить": "Reset",
+    "ИД": "ID",
+    "Имя": "Name",
+    "Значение слайдера: {counter}": "Slider value: {counter}",
+    "Значение меняется при изменения значения слайдера в реальном времени: {counter}": "The value changes when the value of the slider changes in real time: {counter}",
+    "Уведомление типа": "Notification type",
+    "Документация": "Documentation",
+    "Набор статей": "Articles",
+    "Готовая архитектура проекта": "Ready-made project architecture",
+    "Возможность кастомизации компонентов, благодаря разделению core и view частей": "The ability to customize components, thanks to the separation of core and view parts",
+    "Обширная библиотека готовых компонентов с детальной документацией упрощающей интеграцию в проект": "An extensive library of ready-made components with detailed documentation that simplifies integration into the project",
+    "Интуитивный дизайн-макет UI-компонентов в Figma для быстрой визуализации и адаптации под уникальные потребности": "Intuitive design layout of UI components in Figma for quick visualization and adaptation to unique needs"
 }
