--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,5 +55,6 @@
     "Возможность кастомизации компонентов, благодаря разделению core и view частей": "The ability to customize components, thanks to the separation of core and view parts",
     "Обширная библиотека готовых компонентов с детальной документацией упрощающей интеграцию в проект": "An extensive library of ready-made components with detailed documentation that simplifies integration into the project",
     "Интуитивный дизайн-макет UI-компонентов в Figma для быстрой визуализации и адаптации под уникальные потребности": "Intuitive design layout of UI components in Figma for quick visualization and adaptation to unique needs",
-    "Сводка статей:": "Articles overview:"
+    "Сводка статей:": "Articles overview:",
+    "Статьи": "Articles"
 }
