--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,7 +10,7 @@
     "Тёмная тема": "Dark mode",
     "И как же без darkmode в современных интерфейсах": "And what about without darkmode in modern interfaces",
     "Открытый код и документация, библиотека компонентов, открытый код, React, Vue": "Open Source and documentation, component library, Open Source, React, Vue",
-    "Наш Open-Source фреймворк Steroids \n это экосистема на основе React и Redux \n с большим набором готовых компонентов, \n уникальной архитектурой, UI Kit и SSR.": "Our Open-Source Steroids framework is an ecosystem based on React and Redux with a large set of ready-made components, unique architecture, UI Kit and SSR",
+    "Наш Open-Source фреймворк Steroids это экосистема на основе React и Redux с большим набором готовых компонентов, уникальной архитектурой, UI Kit и SSR.": "Our Open-Source Steroids framework is an ecosystem based on React and Redux with a large set of ready-made components, unique architecture, UI Kit and SSR",
     "На старт": "Getting started",
     "Набор инструментов для создания интерфейсов для дизайнера": "A set of tools for creating interfaces for a designer",
     "Датапикер": "Datepicker",
