Fix translation bugs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,5 +63,56 @@
     "Наш фреймворк - подходящее решение для задач вашего бизнеса": "Our framework is the right solution for your business needs",
     "О Steroids": "About Steroids",
     "Мы собрали здесь всю полезную информацию о начале работы со Steroids, \n чтобы помочь вам быстрее освоить фреймворк": "We've compiled all the useful information here about getting started with Steroids,\n to help you get up to speed quickly.",
-    "Фреймворк Steroids предоставляет большой набор UI-компонентов для ваших web-приложений. Отличительная особенность UI-компонентов в стероидах - возможность кастомизировать отображение компонента, не изменяя его логику.": "The Steroids framework provides a large set of UI components for your web applications. A distinctive feature of UI components in steroids is the ability to customize the display of the component without changing its logic."
+    "Фреймворк Steroids предоставляет большой набор UI-компонентов для ваших web-приложений. Отличительная особенность UI-компонентов в стероидах - возможность кастомизировать отображение компонента, не изменяя его логику.": "The Steroids framework provides a large set of UI components for your web applications. A distinctive feature of UI components in steroids is the ability to customize the display of the component without changing its logic.",
+    "Телефон": "Phone",
+    "Дата рождения": "Date of Birth",
+    "Согласие на обработку данных": "Consent to data processing",
+    "Отобразить согласие": "Show consent",
+    "Отобразить поле пароля": "Show password field",
+    "Отобразить поле телефона": "Show phone field",
+    "Ваши данные успешно отправлены!": "Your data has been successfully sent!",
+    "Отобразить поле дня рождения": "Show date field",
+    "Отобразить кнопку отправить": "Show submit button",
+    "Отобразить круговые диаграммы": "Show circle diagrams",
+    "Отобразить горизонтальные диаграммы": "Show horizontal diagrams",
+    "Отобразить колонку с изображением": "Show column with image",
+    "Копировать": "Copy",
+    "Вырезать": "Cut",
+    "Вставить": "Paste",
+    "Специальная вставка": "Special insert",
+    "Показать историю изменений": "Show changes history",
+    "Вставить строку": "Paste row",
+    "Вставить столбец": "Paste column",
+    "Вставить ячейки": "Paste cell",
+    "Редактировать": "Edit",
+    "Сделать основным": "Set as primary",
+    "Удалить": "Delete",
+    "Данные по направлениям": "Directions data",
+    "Направление подготовки": "Direction of training",
+    "Описание направления подготовки": "Direction of training description",
+    "Количество мест": "Number of point",
+    "Отправлять в ЕППУ": "Submit to EPPY",
+    "Да": "Yes",
+    "Профиль": "Profile",
+    "Настройки": "Settings",
+    "Выйти": "Exit",
+    "О нас": "About us",
+    "Услуги": "Services",
+    "Контакты": "Contacts",
+    "Войти": "Login",
+    "Позиция": "Position",
+    "Через {secondsCount} {secondsCount, plural, one{секунду} few{секунды} other{секунд}} пропадет уведомление": "Notification disappears after {secondsCount} {secondsCount, plural, one{second} few{seconds} other{seconds}}",
+    "{secondsCount} {secondsCount, plural, one{секунду} few{секунды} other{секунд}}": "{secondsCount} {secondsCount, plural, one{second} few{seconds} other{seconds}}",
+    "К сожалению, ничего не найдено": "Sorry, nothing found",
+    "Ничего не найдено": "Nothing found",
+    "К списку": "To list",
+    "Добавить": "Add",
+    "Просмотр": "View",
+    "Удалить запись?": "Delete item?",
+    "Загрузить еще...": "Load more...",
+    "Найти": "Search",
+    "Закрыть": "Close",
+    "Сегодня": "Today",
+    "Текущее": "Current",
+    "Ок": "Ok"
 }
