--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,8 +8,8 @@
     "Более 70 компонентов": "More 70 components",
     "Создавайте сложные интерфейсы в библиотеке с более 70 различных UI компонентов, с настраиваемым цветом, размером и другими характеристиками": "Create complex interfaces in a library of over 70 different UI components, with customizable color, size, and more",
     "Тёмная тема": "Dark mode",
-    "И как же без darkmode в современных интерфейсах": "And what about without darkmode in modern interfaces",
-    "Открытый код и документация, библиотека компонентов, открытый код, React, Vue": "Open Source and documentation, component library, Open Source, React, Vue",
+    "И как же без darkmode в современных интерфейсах": "And what's without darkmode in modern interfaces",
+    "Открытый код и документация, библиотека компонентов, React, Vue": "Open Source and documentation, component library, React, Vue",
     "Наш Open-Source фреймворк Steroids это экосистема на основе React и Redux с большим набором готовых компонентов, уникальной архитектурой, UI Kit и SSR.": "Our Open-Source Steroids framework is an ecosystem based on React and Redux with a large set of ready-made components, unique architecture, UI Kit and SSR",
     "На старт": "Getting started",
     "Набор инструментов для создания интерфейсов для дизайнера": "A set of tools for creating interfaces for a designer",
@@ -35,8 +35,8 @@
     "Ещё больше компонентов": "More components",
     "Здесь": "Here",
     "Начать": "Getting started",
-    "Перейти в Git": "Go to Git",
-    "Перейти на Github": "Go to Github",
+    "Перейти в Git": "Github",
+    "Перейти на Github": "Github",
     "Попробуйте сами": "Try it yourself",
     "Размер": "Size",
     "Цвет": "Color",
